test/tests/errors/error-function-incorrect-param3.sm
// true
// false
// false
/**/
/**/

program {
    func x(a: int, b: int, c: int): string {
        "t"
    }

    output x(1, 2, 3, 4);
}